fixed randomBtn: now it is a checkbox

--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -18,7 +18,9 @@
             <div id="color-picker-container">
                 <label for="colorpicker">Pick Color:</label>
                 <input type="color" id="colorpicker" value="#0000ff">
-                <button type="click" id="randomBtn">Random Color</button>
+
+                <input type="checkbox" id="randomBtn" name="randomBtn"/>
+                <label for="randomBtn">Random Color</label>
                 <!--
                 <div>
                     <input type="checkbox" id="darkening" name="darkening"  />
