done Progressive Darkening but it works only for the default color

--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -19,14 +19,12 @@
                 <label for="colorpicker">Pick Color:</label>
                 <input type="color" id="colorpicker" value="#0000ff">
 
-                <input type="checkbox" id="randomBtn" name="randomBtn"/>
-                <label for="randomBtn">Random Color</label>
-                <!--
-                <div>
-                    <input type="checkbox" id="darkening" name="darkening"  />
-                    <label for="darkening">Progressive Darkening</label>
-                </div>
-                -->
+                <input type="checkbox" id="random-checkbox" name="random-checkbox"/>
+                <label for="random-checkbox">Random Color</label>
+                
+                <input type="checkbox" id="darkening" name="darkening"/>
+                <label for="darkening">Progressive Darkening</label>
+                
             </div>
 
             <button type="click" id="clearBtn">Clear Grid</button>
